# distrubutive-multi-agentic-pr-bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-19-stage0-1-verification.md  2026-07-19-stage0-1-vertical-slice.md  2026-07-19-stage2-temporal-durability.md  2026-07-19-stage2-verification.md  2026-07-19-stage3-multi-agent.md  2026-07-19-stage3-verification.md  2026-07-19-stage4-staleness.md  2026-07-19-stage4-verification.md  2026-07-19-stage5-circuit-breaker.md  2026-07-19-stage5-verification.md  2026-07-19-stage6-saga-compensation.md  2026-07-19-stage6-verification.md
docs/superpowers/specs/: 2026-07-19-pr-review-bot-design.md
scripts/: demo.ps1  replay_state.py
src/prbot/: activities.py  activity_types.py  app.py  circuit_breaker.py  config.py  db.py  github_client.py  llm_client.py  review.py  worker.py  workflows.py
src/prbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/prbot/agents/: activities.py  security.py  style.py  test_coverage.py
src/prbot/api/: app.py  events.py
src/prbot/contracts/: schemas.py  validation.py
src/prbot/integrations/: github_client.py  llm_client.py
src/prbot/orchestration/: worker.py  workflows.py
src/prbot/state/: db.py  (+1 more)
tests/: test_activities.py  test_app.py  test_circuit_breaker.py  test_config.py  test_db.py  test_events.py  test_github_client_auth.py  test_github_client_pr.py  test_llm_client.py  test_review.py  test_security.py  test_style.py  test_test_coverage.py  test_validation.py  test_versioned_log.py  test_worker.py  test_workflows.py
