[project]
name = "prbot"
version = "0.1.0"
description = "Multi-agent GitHub PR review bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "pydantic-settings>=2.5",
    "temporalio>=1.7,<2",
    "asyncpg>=0.29,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
